week-art/art-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: art-api
spec:
  type: ClusterIP
  selector:
    app: art-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
